# amigo

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  MMA.py  README.md  index.html  pyproject.toml  requirements.txt  search-index-default.json  search-index-docs-default-current.json  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml  pytest-linux.yml  pytest-macos.yml  pytest-windows.yml  pytest.yml  test-mumps.yml
amigo/: __init__.py  amigo.cpp  cmake_helper.py  component.py  diagnostics.py  expressions.py  interfaces.py  meta.py  model.py  optimizer.py  unary_operations.py  utils.py
amigo/algorithm/: __init__.py  barrier_adaptive_mu.py  barrier_heuristic.py  barrier_quality_function.py  barrier_update.py  bound_safeguards.py  ipm_driver.py  (+16 more)
blog/: atom.xml  index.html
cmake/: AmigoAddModule.cmake  amigoAddModule.cmake  amigoConfig.cmake.in
examples/: CMakeLists.txt  cart_pole.cpp  cart_pole.py
examples/FreeFlyingRobot/: freeflyingrobot.py
examples/beam/: beam.py
examples/beamelement/: beamelement.py
examples/brachistochrone/: brachistochrone.py
examples/brachistochrone problem/: brachistochrone.py
examples/cannon/: cannon_collocation.py
examples/cart/: cart_plots.py  cart_pole.py  cartpoleUQPCE.py  cartpole_uq_input.yaml  serialized_cart_pole.py
examples/compliance/: compliance.py
examples/compliance_helmholtz/: compliance.py
examples/compliance_simple/: compliance.py  serialized_compliance.py
examples/contact/: 2D_contact.py  2D_contact_circle.py  2D_contact_penalty.py  U_bounded.npy  U_doublepenalty.npy  U_penalty.npy  U_penalty_intersect.npy  U_singlepenalty.npy  U_unbounded.npy  beamj.py  contact_cantilever.py  contact_cantilever_penalty.py  opt_contact_cantilever.py  v_cant.npy  v_unbounded.npy
examples/dynamicsoaring/: dynamicsoaring.py  dynamicsoaring_lgr.py  dynamicsoaring_simple.py  dynamicsoaring_stage2.py  lgr_collocation.py  test_dynamics.py
examples/euler_beam/: 2D_euler_beam.py  dist_euler_beam.py  euler_beam.py
examples/euler_bernoulli/: eb_mdao.py
examples/external_quadratic/: quadratic.py
examples/fem/: basis.py  connectivity.py  fem.py  mesh.py  mixed_mesh.py  multimesh_example.py  test_connec.py
examples/fem/boundary_conditions/: bc_model.py  mesh.py
examples/fem/contact/2d_contact/: 2D_contact_circle.py
examples/fem/contact/cantilever/: contact_cantilever.py
examples/fem/contact/cylinder_shell/: cylinder_contact.py  cylinder_mesh.py  cylinder_shell_endtraction.py  utils.py
examples/fem/contact/liftpcruise/: liftpcruise_contact.py  pointgen.py  utils.py
examples/fem/contact/plate/: mesh.py  plate_contact.py  utils.py
examples/fem/mesh_morph/: mesh.py  mesh_morph.py
examples/fem/method_of_manufactured_soln_output/: integral.py  mesh.py
examples/fem/mitc/: mitc.py
examples/fem/mitc-cylinder/: cylinder_mesh.py  cylinder_shell.py  cylinder_shell_endtraction.py  utils.py
examples/fem/mitc_plate/: plate.py
examples/fem/multiple_mesh/: multi_mesh_model.py
examples/fem/plane_stress/: mesh.py  plane_stress.py
examples/fem/poisson/: poisson.py
examples/fem/reduced_integration_plate/: mesh.py  plate.py  plate_contact.py  utils.py
examples/fem/shells/: mesh.py  rm-plate.py
examples/fem_axial_flux_motor/: temp.py
examples/filter/: helmholtz.py
examples/free_flying_robot/: free_flying_robot.py
examples/hang_glider/: hang_glider_collocation.py
examples/helmholtz/: helmholtz.py
examples/hs_problems/hs106/: hs106.py
examples/hs_problems/hs109/: hs109.py
examples/hs_problems/hs111/: hs111.py
examples/hs_problems/hs114/: hs114.py
examples/hs_problems/hs118/: hs118.py
examples/hs_problems/hs119/: hs119.py
examples/interp/: bspline.py
examples/interp/smt/: smt_quadratic.py
examples/maxwell/: linear_tri_elements.py  magnet_mesh.py  maxwell.py  maxwell_ex1.py  maxwell_ex2.py  maxwell_ex3.py  mesh.py  multimaterial_mesh.py  parser.py  utils.py
examples/nozzle/: nozzle.py  nozzle_plots.py  nozzle_solver.py
examples/openmdao/explicit_paraboloid/: paraboloid.py
examples/openmdao/external_paraboloid/: paraboloid.py
examples/openmdao_paraboloid/: parabaloid.py
examples/openmdao_post_opt/: parabaloid.py
examples/orbitraising/: orbitraising.py
examples/paraboloid/: paraboloid.py
examples/quadratic/: quadratic.py
examples/race_lap_car/: race_lap.py
examples/racesingletrack/: race_lap.py  tracks.py
examples/rbf/: bspline.py  rbf.py
examples/rosenbrock/: rosenbrock.py
examples/sellar/: sellar.py
examples/spaceshuttle/: spaceshuttle.py
examples/time_to_climb/: time_to_climb.py
examples/timetoclimb/: timetoclimb.py
examples/trajectory/cannon/: cannon_multiple.py
examples/trajectory/cart/: cart_plots.py  cart_pole.py  serialized_cart_pole.py
examples/trajectory/free_flying_robot/: free_flying_robot.py  plot_solution.py
examples/trajectory/hang_glider/: hang_glider_collocation.py  plot_solution.py
examples/trajectory/race_lap_car/: race_lap.py  tracks.py
examples/trajectory/spaceshuttle/: analyze_kkt.py  run_noshow.py  spaceshuttle.py  test_riccati.py
examples/trajectory/time_to_climb/: time_to_climb.py  time_to_climb_traj.py
img/: cart_pole_graph.html
include/: alias_tracker.h  amigo.h  blas_interface.h  block_amd.h  cart_component.h  cart_pole_problem.h  component_external.h  component_group.h  component_group_base.h  component_set.h  csr_matrix.h  dirichlet_bcs.h  external_component.h  interior_point_backend.h  interior_point_optimizer.h  layout.h  matrix_distribute.h  node_owners.h  optimization_problem.h  optimizer.h  optimizer_backend.h  ordering_utils.h  output_group.h  output_group_base.h  quasidef_cholesky.h  serial_component_set.h  slack_coupling.h  sparse_cholesky.h  sparse_ldl.h  trapezoid_component.h  vector.h  vector_distribute.h
json/: racecar_opt_data.json
logo/: logo.tex
old_examples/: Makefile  cart_pole.cpp
scripts/: build_debug.sh
src/: csr_factor_cuda.cu  csr_matrix_backend.cu  optimizer_backend.cu  vector_distribute.cu
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+278 files in other folders)
